--- a/recordit/templates/admin/manage_course.html
+++ b/recordit/templates/admin/manage_course.html
@@ -20,74 +20,77 @@
 
 {% block dashboard_content %}
     {% if pagination.items %}
-        <table class="table table-striped table-hover table-sm">
-            <thead>
-            <tr class="text-center">
-                <th>#</th>
-                <th>{{ _('Name') }}</th>
-                {% if not current_user.is_teacher %}
-                    <th>{{ _('Teacher') }}</th>
-                    <th>{{ _('Teacher Number') }}</th>
-                {% endif %}
-                <th>{{ _('Grade') }}</th>
-                <th>{{ _('Active') }}</th>
-                <th>{{ _('Actions') }}</th>
-            </tr>
-            </thead>
-            {% for course in pagination.items %}
+        <div class="table-responsive">
+            <table class="table table-striped table-hover table-sm">
+                <thead>
                 <tr class="text-center">
-                    <td class="text-center">
-                        {% set page = request.args.get('page', 1) %}
-                        {{ pagination.total - (config['MANAGE_COURSE_PER_PAGE'] * (page|int - 1) + loop.index) + 1 }}
-                    </td>
-                    <td>
-                        <span data-toggle="tooltip" title="{{ course.remark }}">
-                            {{ course.name }}
-                        </span>
-                    </td>
+                    <th>#</th>
+                    <th>{{ _('Name') }}</th>
                     {% if not current_user.is_teacher %}
-                        <td>{{ course.teacher_name }}</td>
-                        <td>{{ course.teacher_number }}</td>
+                        <th>{{ _('Teacher') }}</th>
+                        <th>{{ _('Teacher Number') }}</th>
                     {% endif %}
-                    <td>
-                        <span data-toggle="tooltip" title="{{ course.date }}">
-                            {{ course.grade }}
-                        </span>
-                    </td>
-                    <td>
-                        {% if course.is_active %}
-                            {% set value = _('True') %}
-                        {% else %}
-                            {% set value = _('False') %}
-                        {% endif %}
-                        <form action="{{ url_for('admin.switch_course_state', course_id=course.id) }}" method="post">
-                            {{ form.csrf_token() }}
-                            {{ form.switch(class="btn", value=value) }}
-                        </form>
-                    </td>
-                    <td>
-                        <div class="button-block">
-                            <a href="{{ url_for('admin.manage_report', course_id=course.id) }}"
-                               class="btn">
-                                {{ _('Manage') }}
-                            </a>
-                            <a href="{{ url_for('admin.download_report', course_id=course.id) }}"
-                               class="btn">
-                                {{ _('Download') }}
-                            </a>
-                            <a href="{{ url_for('admin.add_report', course_id=course.id) }}"
-                               class="btn">
-                                {{ _('Add') }}
-                            </a>
-                            <a href="{{ url_for('admin.add_report_batch', course_id=course.id) }}"
-                               class="btn">
-                                {{ _('Batch Add') }}
-                            </a>
-                        </div>
-                    </td>
+                    <th>{{ _('Grade') }}</th>
+                    <th>{{ _('Active') }}</th>
+                    <th>{{ _('Actions') }}</th>
                 </tr>
-            {% endfor %}
-        </table>
+                </thead>
+                {% for course in pagination.items %}
+                    <tr class="text-center">
+                        <td class="text-center">
+                            {% set page = request.args.get('page', 1) %}
+                            {{ pagination.total - (config['MANAGE_COURSE_PER_PAGE'] * (page|int - 1) + loop.index) + 1 }}
+                        </td>
+                        <td>
+                            <span data-toggle="tooltip" title="{{ course.remark }}">
+                                {{ course.name }}
+                            </span>
+                        </td>
+                        {% if not current_user.is_teacher %}
+                            <td>{{ course.teacher_name }}</td>
+                            <td>{{ course.teacher_number }}</td>
+                        {% endif %}
+                        <td>
+                            <span data-toggle="tooltip" title="{{ course.date }}">
+                                {{ course.grade }}
+                            </span>
+                        </td>
+                        <td>
+                            {% if course.is_active %}
+                                {% set value = _('True') %}
+                            {% else %}
+                                {% set value = _('False') %}
+                            {% endif %}
+                            <form action="{{ url_for('admin.switch_course_state', course_id=course.id) }}"
+                                  method="post">
+                                {{ form.csrf_token() }}
+                                {{ form.switch(class="btn", value=value) }}
+                            </form>
+                        </td>
+                        <td>
+                            <div class="button-block">
+                                <a href="{{ url_for('admin.manage_report', course_id=course.id) }}"
+                                   class="btn">
+                                    {{ _('Manage') }}
+                                </a>
+                                <a href="{{ url_for('admin.download_report', course_id=course.id) }}"
+                                   class="btn">
+                                    {{ _('Download') }}
+                                </a>
+                                <a href="{{ url_for('admin.add_report', course_id=course.id) }}"
+                                   class="btn">
+                                    {{ _('Add') }}
+                                </a>
+                                <a href="{{ url_for('admin.add_report_batch', course_id=course.id) }}"
+                                   class="btn">
+                                    {{ _('Batch Add') }}
+                                </a>
+                            </div>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </div>
         {{ render_pagination(pagination, align='center') }}
     {% else %}
         <div class="tip">
