--- a/recordit/templates/admin/manage_report.html
+++ b/recordit/templates/admin/manage_report.html
@@ -21,63 +21,66 @@
 
 {% block dashboard_content %}
     {% if pagination.items %}
-        <table class="table table-striped table-hover table-sm">
-            <thead>
-            <tr class="text-center">
-                <th>#</th>
-                <th>{{ _('Name') }}</th>
-                <th>{{ _('Speaker') }}</th>
-                <th>{{ _('Speaker Number') }}</th>
-                <th>{{ _('Date') }}</th>
-                <th>{{ _('Active') }}</th>
-                <th>{{ _('Actions') }}</th>
-            </tr>
-            </thead>
-            {% for report in pagination.items %}
+        <div class="table-responsive">
+            <table class="table table-striped table-hover table-sm">
+                <thead>
                 <tr class="text-center">
-                    <td class="text-center">
-                        {% set page = request.args.get('page', 1) %}
-                        {{ pagination.total - (config['MANAGE_REPORT_PER_PAGE'] * (page|int - 1) + loop.index) + 1 }}
-                    </td>
-                    <td>
-                        <span data-toggle="tooltip" title={{ report.remark }}>
-                            {{ report.name }}
-                        </span>
-                    </td>
-                    <td>{{ report.speaker_name }}</td>
-                    <td>{{ report.speaker_number }}</td>
-                    <td>{{ moment(report.date).format('LL') }}</td>
-                    <td>
-                        {% if report.is_active %}
-                            {% set value = _('True') %}
-                        {% else %}
-                            {% set value = _('False') %}
-                        {% endif %}
-                        <form action="{{ url_for('admin.switch_report_state', report_id=report.id) }}" method="post">
-                            {{ switchform.csrf_token() }}
-                            {{ switchform.switch(class="btn", value=value) }}
-                        </form>
-                    </td>
-                    <td>
-                        <div class="button-block">
-                            <a href="{{ url_for('admin.manage_record', report_id=report.id) }}"
-                               class="btn">
-                                {{ _('Manage') }}
-                            </a>
-                            <a href="{{ url_for('admin.download_record', report_id=report.id) }}"
-                               class="btn">
-                                {{ _('Download') }}
-                            </a>
-                            <form action="{{ url_for('admin.delete_report', report_id=report.id) }}"
-                                  method="post">
-                                {{ deleteform.csrf_token() }}
-                                {{ deleteform.delete(class="btn") }}
-                            </form>
-                        </div>
-                    </td>
+                    <th>#</th>
+                    <th>{{ _('Name') }}</th>
+                    <th>{{ _('Speaker') }}</th>
+                    <th>{{ _('Speaker Number') }}</th>
+                    <th>{{ _('Date') }}</th>
+                    <th>{{ _('Active') }}</th>
+                    <th>{{ _('Actions') }}</th>
                 </tr>
-            {% endfor %}
-        </table>
+                </thead>
+                {% for report in pagination.items %}
+                    <tr class="text-center">
+                        <td class="text-center">
+                            {% set page = request.args.get('page', 1) %}
+                            {{ pagination.total - (config['MANAGE_REPORT_PER_PAGE'] * (page|int - 1) + loop.index) + 1 }}
+                        </td>
+                        <td>
+                            <span data-toggle="tooltip" title={{ report.remark }}>
+                                {{ report.name }}
+                            </span>
+                        </td>
+                        <td>{{ report.speaker_name }}</td>
+                        <td>{{ report.speaker_number }}</td>
+                        <td>{{ moment(report.date).format('LL') }}</td>
+                        <td>
+                            {% if report.is_active %}
+                                {% set value = _('True') %}
+                            {% else %}
+                                {% set value = _('False') %}
+                            {% endif %}
+                            <form action="{{ url_for('admin.switch_report_state', report_id=report.id) }}"
+                                  method="post">
+                                {{ switchform.csrf_token() }}
+                                {{ switchform.switch(class="btn", value=value) }}
+                            </form>
+                        </td>
+                        <td>
+                            <div class="button-block">
+                                <a href="{{ url_for('admin.manage_record', report_id=report.id) }}"
+                                   class="btn">
+                                    {{ _('Manage') }}
+                                </a>
+                                <a href="{{ url_for('admin.download_record', report_id=report.id) }}"
+                                   class="btn">
+                                    {{ _('Download') }}
+                                </a>
+                                <form action="{{ url_for('admin.delete_report', report_id=report.id) }}"
+                                      method="post">
+                                    {{ deleteform.csrf_token() }}
+                                    {{ deleteform.delete(class="btn") }}
+                                </form>
+                            </div>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </div>
         {{ render_pagination(pagination, align='center') }}
     {% else %}
         <div class="tip">
