--- a/recordit/templates/macros/pagination.html
+++ b/recordit/templates/macros/pagination.html
@@ -2,7 +2,7 @@
  its BSD License. Copyright (c) 2013, Marc Brinkmann. All rights reserved. #}
 
 {% macro _arg_url_for(endpoint, base) %}
-{# calls url_for() with a given endpoint and **base as the parameters,
+    {# calls url_for() with a given endpoint and **base as the parameters,
    additionally passing on all keyword_arguments (may overwrite existing ones) #}
     {% with kargs = base.copy() %}
         {% do kargs.update(kwargs) %}
@@ -25,7 +25,8 @@
                     <div class="col-lg-12">
                         <ul class="pagination-box pagination {% if size %} pagination-{{ size }} {% endif %} {% if align == 'center' %} justify-content-center {% elif align == 'right' %} justify-content-end {% endif %}" {{ kwargs|xmlattr }}>
                             <li class="{% if not pagination.has_prev %} disabled {% endif %}">
-                                <a class="Previous" href="{{ _arg_url_for(endpoint, url_args, page=pagination.prev_num) if pagination.has_prev else '#' }} {{ fragment }}">
+                                <a class="Previous"
+                                   href="{{ _arg_url_for(endpoint, url_args, page=pagination.prev_num) if pagination.has_prev else '#' }} {{ fragment }}">
                                     <i class="zmdi zmdi-chevron-left"></i>
                                 </a>
                             </li>
@@ -51,7 +52,8 @@
                             {% endfor %}
 
                             <li class="{% if not pagination.has_next %} disabled {% endif %}">
-                                <a class="Next" href="{{ _arg_url_for(endpoint, url_args, page=pagination.next_num) if pagination.has_next else '#' }} {{ fragment }}">
+                                <a class="Next"
+                                   href="{{ _arg_url_for(endpoint, url_args, page=pagination.next_num) if pagination.has_next else '#' }} {{ fragment }}">
                                     <i class="zmdi zmdi-chevron-right"></i>
                                 </a>
                             </li>
