--- a/recordit/templates/base.html
+++ b/recordit/templates/base.html
@@ -43,8 +43,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"/>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/plugins.css') }}"/>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/my.css') }}">
     {% endblock styles %}
 
     {% block headscript %}
@@ -193,7 +193,7 @@
     <script src="{{ url_for('static', filename='js/plugins.js') }}"></script>
     <script src="{{ url_for('static', filename='js/ajax-mail.js') }}"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/my.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/style.js') }}"></script>
 {% endblock scripts %}
 </body>
 
