--- a/recordit/templates/errors.html
+++ b/recordit/templates/errors.html
@@ -28,7 +28,7 @@
                         <p>
                             {{ _('Sorry,<br /> the page you are looking for does not exist,<br /> have been removed, name changed or is temporarity unavailable.') }}
                         </p>
-                        <a href="{{ url_for('front.index') }}" class="home-bacck-button">
+                        <a href="{{ url_for('front.index') }}" class="home-back-button">
                             {{ _('Back to home page') }}
                         </a>
                     </div>
